--- a/1_Google_Colab_e_Jupyter_Notebook.ipynb
+++ b/1_Google_Colab_e_Jupyter_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMSvMAV+4ss72Bt9P4ALT6k",
+      "authorship_tag": "ABX9TyOC2DV+xUrDBVFR3l+CJKt/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +44,270 @@
       ],
       "metadata": {
         "id": "4SXolEw_2Mlt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ambiente Interativo\n",
+        "\n",
+        "Uma das principais vantagens de se usar Jupyter notebooks no lugar de IDE convencionais para criar seus projetos, é porque esta página não é estática. Quando você cria um arquivo aqui, qualquer pessoa vai conseguir rodar seu código e fazer suas próprias alterações.\n",
+        "\n",
+        "Isto é perfeito! Imagina uma situação onde você fez uma análise para a sua empresa, 6 meses atrás. Determinado dia, o Diretor de vendas pede para você calcular uma informação completamente nova em cima daquela análise.\n",
+        "\n",
+        "Se você tem apenas o relatório estático (ou mesmo um monte de arquivos .py, sem documentação), as chances são que você não vai ser capaz de entregrar a informação nova em tempo ábil.\n",
+        "\n",
+        "Agora, se você tem salvo todos os seus notebooks de maneira organizada, preferencialmente na nuvem, você pode executar todas as células novamente e apenas incluir mais essa análise extra.\n",
+        "\n",
+        "Veja como é fácil trabalhar com céulas interativas."
+      ],
+      "metadata": {
+        "id": "fyoS1jfm2S0s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# operações matemáticas com Python\n",
+        "receita = 14800.90\n",
+        "despesa_fixa = 4500\n",
+        "despesa_variavel = 3600.90\n",
+        "\n",
+        "lucro = receita - (despesa_fixa + despesa_variavel)\n",
+        "\n",
+        "print(lucro)"
+      ],
+      "metadata": {
+        "id": "bJ-e0aUk2Vs1",
+        "outputId": "eea4f414-7fcf-4652-bc36-9f55443bcbc6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6700.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A célula acima é nossa primeira contendo código. Todas as anteriores (incluindo este) eram texto puro.\n",
+        "\n",
+        "Dê dois cliques na célula acima para editar, altere o valor de alguma varíavel (receita, por exemplo) e aperte **SHIFT + ENTER** (ou clique no ícone \"Play\" na esquerda dela. Essa é a vantagem de se documentar um projeto pelo Jupyter notebook, você torna ele replicável."
+      ],
+      "metadata": {
+        "id": "QbN54OGK2goa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Atalhos do Jupyter\n",
+        "\n",
+        "Saber os atalhos do Jupyter vai ajudar você a ganhar tempo. Apesar de você sempre poder recorrer ao menu lá em cima, recomendo você já ir se acostumando com as principais combinações de teclas. Aqui estão algumas delas:\n",
+        "\n",
+        "* Aperte **Shift + Enter** para executar a célula selecionada;\n",
+        "* Aperte **Ctrl/Cmd + M** seguindo por **B** para criar uma célula nóva abaixo;\n",
+        "* Aperte **Ctrl/Cmd + M** seguindo por **A** para criar uma célula nóva acima;\n",
+        "* Aperte **Ctrl/Cmd + M** seguindo por **M** para definir a célula selecionada como tipo Texto;\n",
+        "* Aperte **Ctrl/Cmd + M** seguindo por **Y** para definir a célula selecionada como tipo Código;"
+      ],
+      "metadata": {
+        "id": "4r2qseRZ2hyx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Integração com o Sistema\n",
+        "\n",
+        "Outra coisa que o Jupyter notebook possibilita é você acessar o próprio sistema, tudo a partir da célula de código.\n",
+        "\n",
+        "Se você está acostumado a usar linha de comando no Terminal, por exemplo, pode integrar seu código Python com essa possibilidade.\n",
+        "\n",
+        "Por exemplo, para eu listar todos os arquivos da pasta atual:"
+      ],
+      "metadata": {
+        "id": "rnd8UkId2oNy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls / -l"
+      ],
+      "metadata": {
+        "id": "yfoUynkg2rdt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Também é possível baixar arquivos por comandos do Terminal, criar diretórios e automatizar *pipelines*. Isso contribui mais ainda para que seu notebook seja replicável por qualquer pessoa.\n",
+        "\n",
+        "Vamos supor que você está usando um arquivo csv que se encontra no endereço ```https://raw.githubusercontent.com/carlosfab/data_science/master/data/train.csv``` e quer baixar o mesmo:"
+      ],
+      "metadata": {
+        "id": "RYNPxfaG2uxx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# baixar o arquivo train.csv\n",
+        "!wget https://raw.githubusercontent.com/carlosfab/data_science/master/data/train.csv\n",
+        "\n",
+        "# ver o diretório\n",
+        "!ls -l"
+      ],
+      "metadata": {
+        "id": "w2MeHBaC3glk",
+        "outputId": "8706bc89-6d5a-494d-8771-6817ad4a7e22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-03-14 02:50:17--  https://raw.githubusercontent.com/carlosfab/data_science/master/data/train.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 61194 (60K) [text/plain]\n",
+            "Saving to: ‘train.csv’\n",
+            "\n",
+            "\rtrain.csv             0%[                    ]       0  --.-KB/s               \rtrain.csv           100%[===================>]  59.76K  --.-KB/s    in 0.003s  \n",
+            "\n",
+            "2024-03-14 02:50:17 (17.1 MB/s) - ‘train.csv’ saved [61194/61194]\n",
+            "\n",
+            "total 64\n",
+            "drwxr-xr-x 1 root root  4096 Mar 12 13:24 sample_data\n",
+            "-rw-r--r-- 1 root root 61194 Mar 14 02:50 train.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Auxílios do Jupyter\n",
+        "\n",
+        "Usar o **Tab** ajuda muito você a completar automaticamente o código, ou ver a documentação rapidamente. Veja como usar essa tecla para ver o que existe dentro da biblioteca ```pandas```.*italicized text*"
+      ],
+      "metadata": {
+        "id": "AAdOylr23c8q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "wKMPFv0N39Bx"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Depois de importar o pacote, digite pd. e aperte Tab. Todas as possibilidades serão exibidas, e você vai poder escolher aquela desejada."
+      ],
+      "metadata": {
+        "id": "5qest_jd4CLz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd."
+      ],
+      "metadata": {
+        "id": "GwpvxKPx3_-_",
+        "outputId": "12bd20d9-d659-466f-e426-72bbe689d74c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<module 'pandas' from '/usr/local/lib/python3.10/dist-packages/pandas/__init__.py'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vamos supor agora que você quer usar pd.read_csv para ler o arquivo csv que acabou de baixar acima. Para saber quais os parâmetros que fazem parte de qualquer classe ou função, basta digitar pd.read_csv( e apertar Tab."
+      ],
+      "metadata": {
+        "id": "_oBJtgQ85J3X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.read_csv("
+      ],
+      "metadata": {
+        "id": "0lIIoLx85K0-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Outra dica que vai ajudar muito nos momentos que você estiver com dúvida, é usar o ponto de interrogação no final de um objeto ou método, e rodar a célula usando Shift+Enter."
+      ],
+      "metadata": {
+        "id": "OUbHsPF-5OxW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.read_csv?"
+      ],
+      "metadata": {
+        "id": "nhhVCPmT5PZZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Gráficos no Colab\n",
+        "\n",
+        "Gráficos vão fazer parte do seu dia a dia. Por tamanha a importância, teremos um módulo inteiramente dedicado a eles, onde vamos explorar as bibliotecas ```matplotlib``` e ```seaborn```.\n",
+        "\n",
+        "Você não precisa entender o código abaixo ainda, apenas ver como é possível gerar um facilmente por aqui."
+      ],
+      "metadata": {
+        "id": "Wct5cEx55T22"
       }
     }
   ]
