--- a/2_Introdução_ao_Pandas.ipynb
+++ b/2_Introdução_ao_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIj/i56AUA1Tzl0G4Ip4wK",
+      "authorship_tag": "ABX9TyOOX03OcLIP4fTwntqy5aMd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,13 +63,79 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Instalando e utilizando o Pandas\n",
+        "\n",
+        "Caso você esteja rodando o código na sua máquina local, o Pandas pode ser instalado pela linha de comando usando o seu gerenciador de pacotes (`pip` ou `conda`).\n",
+        "\n",
+        "Dependendo de qual deles seja, o comando que você deve usar é\n",
+        "\n",
+        "`pip install pandas`\n",
+        "\n",
+        "ou\n",
+        "\n",
+        "`conda install pandas`\n",
+        "\n",
+        "Como estamos usando o Colab neste curso, o Pandas vem instalado por padrão. Ou seja, a única coisa que você precisa é importar o pacote. Normalmente, para importar qualquer pacote basta apenas usar o comando `import nome_do_pacote`.\n",
+        "\n",
+        "No entanto, é muito comum a gente importar o Pandas usando `import pandas as pd` para abreviar o nome da biblioteca. Se você reparar em projetos de outros cientistas de dados, vai ver que esse é (provavelmente) a maneira que eles utilizam."
+      ],
+      "metadata": {
+        "id": "VsxhD5qmzaGu"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Rv9bcLciCF6E"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# importar a biblioteca pandas\n",
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Importar arquivos `csv`\n",
+        "\n",
+        "Para dar um exemplo de como é simples importar dados com o Pandas, veja o seguinte exemplo.\n",
+        "\n",
+        "Pelo site [Yahoo Finance](https://finance.yahoo.com/quote/BBAS3.SA/history?p=BBAS3.SA), baixei os dados da ação ordinária do Banco do Brasil (BBAS3) em formato `csv` e disponibilizei o arquivo [neste link](https://raw.githubusercontent.com/carlosfab/curso_data_science_na_pratica/master/modulo_02/BBAS3.SA.csv). Se eu abrir esse arquivo na minha máquina pelo Excel, é assim que ele vai aparecer para mim:\n",
+        "\n",
+        "<center><img src=\"https://raw.githubusercontent.com/carlosfab/curso_data_science_na_pratica/master/modulo_02/bbas3_excel.png\" height=\"300px\"></center>\n",
+        "\n",
+        "Importar esse mesmo arquivo usando o Pandas é tão simples quanto executar a função `pd.read_csv(\"local_do_arquivo.csv\")`, informando qual o endereço que o `csv` se encontra (endereço na internet ou caminho na máquia local."
+      ],
+      "metadata": {
+        "id": "OQ4AhMtt0Iis"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "mSsmWOr-0YTE"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importar o arquivo csv para o Pandas\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/BBAS3.SA.csv\")"
+      ],
+      "metadata": {
+        "id": "9-ZIFA7x02Dk"
+      },
+      "execution_count": 4,
+      "outputs": []
     }
   ]
 }
