--- a/2_Introdução_ao_Pandas.ipynb
+++ b/2_Introdução_ao_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO408hl6uZmKtSbeL5b1v1Y",
+      "authorship_tag": "ABX9TyNNQ0t/p/+OyrLg2YZqUN4w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1252,8 +1252,43 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# ver os nomes das colunas\n",
+        "df.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nVlCvUi0-xU7",
+        "outputId": "0e8ab4d2-5827-4690-abe6-1d1de15ac6d9"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Date', 'Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Conhecer o tipo de variável que está representado em cada coluna é essencial. Por exemplo:\n",
+        "\n",
+        "* Quando temos uma coluna que trata de receita, despesa ou lucro, é desejável que lidemos com variáveis do tipo `float`.\n",
+        "* Quando estamos lidando com anos (2017, 2018, 2019), iremos desejar trabalhar com variáveis do tipo `int`.\n",
+        "* Quanto temos datas completas (`2019-12-30 07:37`), iremos desejar usar o formato `datetime`, para conseguir manipular adequadamente o *dataset*.\n",
+        "\n",
+        "Para conhecer os tipos de variáveis de cada coluna, use `df.dtypes`."
+      ],
       "metadata": {
         "id": "t1cWuWaP-EIj"
       }
