--- a/2_Introdução_ao_Pandas.ipynb
+++ b/2_Introdução_ao_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwNSJi1GLakphCdsWqkNVi",
+      "authorship_tag": "ABX9TyMLYgSYQQIsU9K0j/6sTxRH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1686,6 +1686,95 @@
       "metadata": {
         "id": "J0lliiXbRbNK"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CoI5f7SHR0Ji",
+        "outputId": "ed1883a6-c2b3-42e3-b629-b35780771990"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 248 entries, 0 to 247\n",
+            "Data columns (total 7 columns):\n",
+            " #   Column     Non-Null Count  Dtype  \n",
+            "---  ------     --------------  -----  \n",
+            " 0   Date       248 non-null    object \n",
+            " 1   Open       247 non-null    float64\n",
+            " 2   High       247 non-null    float64\n",
+            " 3   Low        247 non-null    float64\n",
+            " 4   Close      247 non-null    float64\n",
+            " 5   Adj Close  247 non-null    float64\n",
+            " 6   Volume     247 non-null    float64\n",
+            "dtypes: float64(6), object(1)\n",
+            "memory usage: 13.7+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Selecionando colunas\n",
+        "\n",
+        "Há diversas maneiras de selecionar um sub-conjunto de dados em uma estrutura *DataFrame*.\n",
+        "\n",
+        "Na maioria dos casos, o que queremos fazer é selecionar apenas uma coluna de todo o *DataFrame*.\n",
+        "\n",
+        "Para selecionar uma variável, você deve colocar o nome da coluna entre colchetes, referenciando a variável onde os seus dados foram importados."
+      ],
+      "metadata": {
+        "id": "R6poETZYR20Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# selecionar a variável (coluna) \"High\" da nossa variável df\n",
+        "df[\"High\"]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sADXKPeQSJ2v",
+        "outputId": "e5e3b98e-057d-4695-89e0-271d074e3f9f"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      49.669998\n",
+              "1      49.680000\n",
+              "2      50.840000\n",
+              "3      51.259998\n",
+              "4      51.189999\n",
+              "         ...    \n",
+              "243    26.200001\n",
+              "244    29.250000\n",
+              "245    30.209999\n",
+              "246    28.780001\n",
+              "247    27.760000\n",
+              "Name: High, Length: 248, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     }
   ]
 }
