--- a/2_Introdução_ao_Pandas.ipynb
+++ b/2_Introdução_ao_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLYgSYQQIsU9K0j/6sTxRH",
+      "authorship_tag": "ABX9TyOXCeAIBL+x/rCpSQkAP6gM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1773,6 +1773,55 @@
           },
           "metadata": {},
           "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Caso o nome das coluna não contenha espaços em branco e caracteres especiais, você consegue selecionar ela de outra maneira (muito mais prática, na minha opinião).\n",
+        "\n",
+        "No lugar de `df[\"High\"]` você pode usar `df.High`, que terá o mesmo efeito."
+      ],
+      "metadata": {
+        "id": "PwgO-dijSbLe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# selecionar a variável (coluna) \"High\" da nossa variável df\n",
+        "df.High"
+      ],
+      "metadata": {
+        "id": "wg2E1N5USdqB",
+        "outputId": "dcc6d759-d134-4232-ab61-7fa248d546c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      49.669998\n",
+              "1      49.680000\n",
+              "2      50.840000\n",
+              "3      51.259998\n",
+              "4      51.189999\n",
+              "         ...    \n",
+              "243    26.200001\n",
+              "244    29.250000\n",
+              "245    30.209999\n",
+              "246    28.780001\n",
+              "247    27.760000\n",
+              "Name: High, Length: 248, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     }
