--- a/2_Introdução_ao_Pandas.ipynb
+++ b/2_Introdução_ao_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXCeAIBL+x/rCpSQkAP6gM",
+      "authorship_tag": "ABX9TyNyRverlQITcritbm/bv3vo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1794,11 +1794,11 @@
         "df.High"
       ],
       "metadata": {
-        "id": "wg2E1N5USdqB",
-        "outputId": "dcc6d759-d134-4232-ab61-7fa248d546c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wg2E1N5USdqB",
+        "outputId": "dcc6d759-d134-4232-ab61-7fa248d546c0"
       },
       "execution_count": 15,
       "outputs": [
@@ -1824,6 +1824,135 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Calculando a média de uma coluna\n",
+        "\n",
+        "Quando executamos o código `df.High`, você viu acima que foi impressa apenas a coluna de valores `High`. Para encontrar a média desses valores, basta utilizar `df.High.mean()`."
+      ],
+      "metadata": {
+        "id": "uUJmKRq6TPsg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# calcular a média da coluna \"High\"\n",
+        "df.High.mean()"
+      ],
+      "metadata": {
+        "id": "YPXxUsf1TN2Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Isso significa que a média dos valores da coluna `High` é `46.57639677327938`. Como vamos ver ao longo do curso, existem muitas outras medidas importantes."
+      ],
+      "metadata": {
+        "id": "e9uYENp1TWTk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Trabalhando com datas (`datetime`)\n",
+        "\n",
+        "Quando você importar um arquivo que tenha datas, provavelmente o Pandas não irá reconhecer as mesmas de maneira automática.\n",
+        "\n",
+        "Quando você checou `df.info()`, viu que a coluna `Date` estava como `object`. No caso, ela é apenas texto (`string`) e não permite a extração de muita coisa útil.\n",
+        "\n",
+        "Vamos converter a coluna usando `pd.to_datetime` e informando qual o formato da nossa data."
+      ],
+      "metadata": {
+        "id": "VVFIIIL4TZlF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# antes\n",
+        "df.Date"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "70GeNxpjTb_U",
+        "outputId": "8d33ba6a-969b-47d6-8f7c-089a9e30d568"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      2019-05-06\n",
+              "1      2019-05-07\n",
+              "2      2019-05-08\n",
+              "3      2019-05-09\n",
+              "4      2019-05-10\n",
+              "          ...    \n",
+              "243    2020-04-27\n",
+              "244    2020-04-28\n",
+              "245    2020-04-29\n",
+              "246    2020-04-30\n",
+              "247    2020-05-04\n",
+              "Name: Date, Length: 248, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.to_datetime(df.Date, format=\"%Y-%m-%d\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ugKKLPp8ToCc",
+        "outputId": "73731cf2-5f9d-4fdd-bb81-d0a7b375534a"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     2019-05-06\n",
+              "1     2019-05-07\n",
+              "2     2019-05-08\n",
+              "3     2019-05-09\n",
+              "4     2019-05-10\n",
+              "         ...    \n",
+              "243   2020-04-27\n",
+              "244   2020-04-28\n",
+              "245   2020-04-29\n",
+              "246   2020-04-30\n",
+              "247   2020-05-04\n",
+              "Name: Date, Length: 248, dtype: datetime64[ns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "UT5Ok-51Tm6m"
+      }
     }
   ]
 }
