--- a/2_Introdução_ao_Pandas.ipynb
+++ b/2_Introdução_ao_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyRverlQITcritbm/bv3vo",
+      "authorship_tag": "ABX9TyNwB73jWa380ZS5VgRh4/+M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1944,6 +1944,113 @@
           },
           "metadata": {},
           "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# converter coluna Date em datetime\n",
+        "df.Date = pd.to_datetime(df.Date, format=\"%Y-%m-%d\")"
+      ],
+      "metadata": {
+        "id": "95ABvPWoUXSH"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# depois\n",
+        "df.Date"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KMHr0GKxUahN",
+        "outputId": "aeb06408-3257-4848-a0d6-4dba64889c3c"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     2019-05-06\n",
+              "1     2019-05-07\n",
+              "2     2019-05-08\n",
+              "3     2019-05-09\n",
+              "4     2019-05-10\n",
+              "         ...    \n",
+              "243   2020-04-27\n",
+              "244   2020-04-28\n",
+              "245   2020-04-29\n",
+              "246   2020-04-30\n",
+              "247   2020-05-04\n",
+              "Name: Date, Length: 248, dtype: datetime64[ns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Olhe como agora eu consigo acessar apenas os componentes de uma data, individualmente, usando `df.Date.dt`"
+      ],
+      "metadata": {
+        "id": "r2y53R8EUjVs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"Year\"] = df.Date.dt.year"
+      ],
+      "metadata": {
+        "id": "U_j1q1uZUiMk"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.Date.dt.month"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FP5UHfNQVzt9",
+        "outputId": "4fc52ca8-8679-4f21-a721-79ba0c0e1eb3"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      5\n",
+              "1      5\n",
+              "2      5\n",
+              "3      5\n",
+              "4      5\n",
+              "      ..\n",
+              "243    4\n",
+              "244    4\n",
+              "245    4\n",
+              "246    4\n",
+              "247    5\n",
+              "Name: Date, Length: 248, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     },
