--- a/2_Introdução_ao_Pandas.ipynb
+++ b/2_Introdução_ao_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwB73jWa380ZS5VgRh4/+M",
+      "authorship_tag": "ABX9TyNLPK/WXe89bmgRphql5q3W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2055,10 +2055,61 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "df.Date.dt.day"
+      ],
       "metadata": {
-        "id": "UT5Ok-51Tm6m"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "osGH4BXPV-oS",
+        "outputId": "c61d5531-8a54-41af-d9ce-1183b1f048e1"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       6\n",
+              "1       7\n",
+              "2       8\n",
+              "3       9\n",
+              "4      10\n",
+              "       ..\n",
+              "243    27\n",
+              "244    28\n",
+              "245    29\n",
+              "246    30\n",
+              "247     4\n",
+              "Name: Date, Length: 248, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "No entanto, há vários formatos que um usuário pode lançar como sendo datas. Você pode encontrar exemplos como:\n",
+        "\n",
+        "* 31/06/15\n",
+        "* 31/06/2015\n",
+        "* 31-6-15\n",
+        "* 2015-6-31\n",
+        "* 31 de junho de 2015\n",
+        "\n",
+        "Para lidar com tudo isso, você vai ter que entender a documentação. Seguem dois links que serão úteis para isso:\n",
+        "\n",
+        "* https://pandas.pydata.org/docs/reference/api/pandas.to_datetime.html?highlight=to_datetime#pandas.to_datetime\n",
+        "* https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior"
+      ],
+      "metadata": {
+        "id": "FZOWPSOYWEJr"
       }
     }
   ]
