--- a/4_Informações_Estatísticas.ipynb
+++ b/4_Informações_Estatísticas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/+Wzpi5Kt4Va9hKPZIjvH",
+      "authorship_tag": "ABX9TyNZm52fFxHmrZcgfjElWB8n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,6 +79,392 @@
         "# importar o dataset\n",
         "df = pd.read_csv(\"http://dl.dropboxusercontent.com/s/yyfeoxqw61o3iel/df_rides.csv\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "4n0GbRBuPzbJ",
+        "outputId": "fcf178b6-ca3b-4e75-e8c2-74d73d2ad333"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  user_gender user_birthdate user_residence   ride_date time_start  time_end  \\\n",
+              "0           M     1971-06-08            NaN  2018-01-01   06:05:18  06:21:33   \n",
+              "1           M     1989-02-11             DF  2018-01-01   06:27:01  06:32:17   \n",
+              "2           M     1968-07-19            NaN  2018-01-01   06:29:33  06:44:57   \n",
+              "3           M     1991-12-19            NaN  2018-01-01   06:53:53  06:59:45   \n",
+              "4           M     1969-03-03             DF  2018-01-01   06:58:56  17:40:04   \n",
+              "\n",
+              "                     station_start  \\\n",
+              "0                11 - Rodoviária 2   \n",
+              "1         26 - Ministério da Saude   \n",
+              "2                11 - Rodoviária 2   \n",
+              "3  10 - Ministério dos Transportes   \n",
+              "4                   15 - Brasil 21   \n",
+              "\n",
+              "                                         station_end  ride_duration  ride_late  \n",
+              "0                            41 - Instituto de Artes      16.250000        0.0  \n",
+              "1  28 - CNMP - Conselho Nacional do Ministério Pú...       5.266667        0.0  \n",
+              "2                            43 - Biblioteca Central      15.400000        0.0  \n",
+              "3                                     6 - Rodoviária       5.866667        0.0  \n",
+              "4                                  11 - Rodoviária 2     641.133333        1.0  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-56489d29-7fb8-4a54-8eaf-1b6e2c5ce330\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>user_gender</th>\n",
+              "      <th>user_birthdate</th>\n",
+              "      <th>user_residence</th>\n",
+              "      <th>ride_date</th>\n",
+              "      <th>time_start</th>\n",
+              "      <th>time_end</th>\n",
+              "      <th>station_start</th>\n",
+              "      <th>station_end</th>\n",
+              "      <th>ride_duration</th>\n",
+              "      <th>ride_late</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>M</td>\n",
+              "      <td>1971-06-08</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2018-01-01</td>\n",
+              "      <td>06:05:18</td>\n",
+              "      <td>06:21:33</td>\n",
+              "      <td>11 - Rodoviária 2</td>\n",
+              "      <td>41 - Instituto de Artes</td>\n",
+              "      <td>16.250000</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>M</td>\n",
+              "      <td>1989-02-11</td>\n",
+              "      <td>DF</td>\n",
+              "      <td>2018-01-01</td>\n",
+              "      <td>06:27:01</td>\n",
+              "      <td>06:32:17</td>\n",
+              "      <td>26 - Ministério da Saude</td>\n",
+              "      <td>28 - CNMP - Conselho Nacional do Ministério Pú...</td>\n",
+              "      <td>5.266667</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>M</td>\n",
+              "      <td>1968-07-19</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2018-01-01</td>\n",
+              "      <td>06:29:33</td>\n",
+              "      <td>06:44:57</td>\n",
+              "      <td>11 - Rodoviária 2</td>\n",
+              "      <td>43 - Biblioteca Central</td>\n",
+              "      <td>15.400000</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>M</td>\n",
+              "      <td>1991-12-19</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2018-01-01</td>\n",
+              "      <td>06:53:53</td>\n",
+              "      <td>06:59:45</td>\n",
+              "      <td>10 - Ministério dos Transportes</td>\n",
+              "      <td>6 - Rodoviária</td>\n",
+              "      <td>5.866667</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>M</td>\n",
+              "      <td>1969-03-03</td>\n",
+              "      <td>DF</td>\n",
+              "      <td>2018-01-01</td>\n",
+              "      <td>06:58:56</td>\n",
+              "      <td>17:40:04</td>\n",
+              "      <td>15 - Brasil 21</td>\n",
+              "      <td>11 - Rodoviária 2</td>\n",
+              "      <td>641.133333</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56489d29-7fb8-4a54-8eaf-1b6e2c5ce330')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-56489d29-7fb8-4a54-8eaf-1b6e2c5ce330 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-56489d29-7fb8-4a54-8eaf-1b6e2c5ce330');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-6dc1af30-2be2-48f3-ade1-50c04601d8d6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6dc1af30-2be2-48f3-ade1-50c04601d8d6')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-6dc1af30-2be2-48f3-ade1-50c04601d8d6 button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "df"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Resumo das informações estatísticas\n",
+        "\n",
+        "Uma das maneiras mais simples de se iniciar uma análise exploratória das variáveis numéricas é utilizando o método `describe()`.\n",
+        "\n",
+        "Imediatamente você obtém um resumo contendo algumas das principais informações estatísticas relevantes:\n",
+        "\n",
+        "* **count** - quantidade de entradas válidas\n",
+        "* **mean** - média dos valores\n",
+        "* **std** - desvio padrão\n",
+        "* **min** - menor valor da coluna\n",
+        "* **25%** - percentil 25\n",
+        "* **50%** - percentil 50 (e mediana)\n",
+        "* **75%** - percentil 75\n",
+        "* **max** - maior valor da coluna\n",
+        "\n",
+        "É possível identificar de cara colunas com valores ausentes e possíveis *outliers* (por exemplo, olhando o valor da mediana e comparando com valores máximos e mínimos)"
+      ],
+      "metadata": {
+        "id": "xdAv-tDdQKwR"
+      }
     }
   ]
 }
