--- a/6_Valores_Ausentes.ipynb
+++ b/6_Valores_Ausentes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPULz+XFicS7+I4oEPDCxNH",
+      "authorship_tag": "ABX9TyM/CeiiqS1NxlzFb0bKdxI4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
           "height": 206
         },
         "id": "_ciQTB45r-1X",
-        "outputId": "e8485a1b-9915-44f4-ad04-d0d7cb090398"
+        "outputId": "9baf1e47-9dda-47af-f637-ae1a1b074e51"
       },
       "outputs": [
         {
@@ -92,7 +92,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e8b2d686-5a8f-4ad8-b0c8-30f30facff34\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f86a40b1-3129-481c-ad97-2f0e7c1e6c65\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -195,7 +195,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e8b2d686-5a8f-4ad8-b0c8-30f30facff34')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f86a40b1-3129-481c-ad97-2f0e7c1e6c65')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -247,12 +247,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e8b2d686-5a8f-4ad8-b0c8-30f30facff34 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f86a40b1-3129-481c-ad97-2f0e7c1e6c65 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e8b2d686-5a8f-4ad8-b0c8-30f30facff34');\n",
+              "        const element = document.querySelector('#df-f86a40b1-3129-481c-ad97-2f0e7c1e6c65');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -272,8 +272,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a917e931-260b-4794-9202-3555502329c1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a917e931-260b-4794-9202-3555502329c1')\"\n",
+              "<div id=\"df-473fc0a2-dae8-4a15-a559-47f4b76b258a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-473fc0a2-dae8-4a15-a559-47f4b76b258a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -392,7 +392,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a917e931-260b-4794-9202-3555502329c1 button');\n",
+              "        document.querySelector('#df-473fc0a2-dae8-4a15-a559-47f4b76b258a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -422,6 +422,348 @@
         "\n",
         "# ver as primeiras entradas\n",
         "df.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Identificando os valores ausentes\n",
+        "\n",
+        "Já vimos anteriormente como identificar valores do tipo `NaN`. É indispensável identificar a quantidade de valores ausentes e qual a representatividade dessa quantidade frente ao total de entradas."
+      ],
+      "metadata": {
+        "id": "Y_qT5F-2m-TE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ver a quantidade de valores ausentes\n",
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "WBdRDw79nAsU",
+        "outputId": "24e94281-5e23-4938-a068-cda94a0166aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "user_gender          396\n",
+              "user_birthdate         1\n",
+              "user_residence    179905\n",
+              "ride_date              0\n",
+              "time_start             0\n",
+              "time_end           43285\n",
+              "station_start          0\n",
+              "station_end            0\n",
+              "ride_duration      73174\n",
+              "ride_late          73174\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ver a porcentagem de valores ausentes\n",
+        "df.isnull().sum() / df.shape[0]"
+      ],
+      "metadata": {
+        "id": "orEwlcIinCmc",
+        "outputId": "f669e927-50c5-43a5-b280-6f851f00a2af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "user_gender       0.001378\n",
+              "user_birthdate    0.000003\n",
+              "user_residence    0.626144\n",
+              "ride_date         0.000000\n",
+              "time_start        0.000000\n",
+              "time_end          0.150650\n",
+              "station_start     0.000000\n",
+              "station_end       0.000000\n",
+              "ride_duration     0.254676\n",
+              "ride_late         0.254676\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Excluir valores ausentes\n",
+        "\n",
+        "Está é uma primeira opção quando você está lidando com valores nulos do tipo `NaN` no seu *DataFrame*.\n",
+        "\n",
+        "Entretanto, ela tende a não ser ideal, pois por causa do valor de uma única célula, você elimina os dados existentes em outras colunas. Esta opção deve ser considerada no caso da quantidade de dados nulos serem pequenos a ponto de não ter representatividade no dataset\n",
+        "\n",
+        "Eu consigo excluir tanto linhas com valores ausentes quanto colunas inteiras. Para que o Pandas saiba se a sua inteção é de eliminar linhas (`axis=0`) ou colunas (`axis=1`), você deve informar dentro do método `dropna()`."
+      ],
+      "metadata": {
+        "id": "c5Dd2Uq-nFW7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# eliminar todas as entradas onde existam valores ausentes em `user_gender`\n",
+        "df_clean = df.dropna(subset=['user_gender'], axis=0)\n",
+        "\n",
+        "# comparar o antes e o depois\n",
+        "print(\"Antes:\\t{}\".format(df.shape))\n",
+        "print(\"Depois:\\t{}\".format(df_clean.shape))"
+      ],
+      "metadata": {
+        "id": "LjlsrOinnH3K",
+        "outputId": "0b26e4dc-4a28-4465-cdc6-4b262f536627",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Antes:\t(287322, 10)\n",
+            "Depois:\t(286926, 10)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Preencher valores\n",
+        "\n",
+        "Esta normalmente é a melhor opção, pois permite que você mantenha dados existentes em outras células.\n",
+        "\n",
+        "Uma pergunta que normalmente surge é: \"mas eu substituo o valor ausente por qual valor?\". A resposta para essa pergunta é: depende.\n",
+        "\n",
+        "Existem técnicas simples como usar valor mais frequente, media e mediana, assim como há técnicas mais avançadas que envolvem até mesmo o uso de modelos de *machine learning* cuja função é dizer qual valor usar nesses campos.\n",
+        "\n",
+        "Vou mostrar como você pode usar a mediana para preencher os campos ausentes da coluna `ride_duration`, com o uso da função `fillna()`"
+      ],
+      "metadata": {
+        "id": "N11gQlaDnKXU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# antes\n",
+        "df_clean.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "veUNcDxDnMkq",
+        "outputId": "f6debe4b-4228-4641-fab2-96a559992289",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "user_gender            0\n",
+              "user_birthdate         1\n",
+              "user_residence    179818\n",
+              "ride_date              0\n",
+              "time_start             0\n",
+              "time_end           43212\n",
+              "station_start          0\n",
+              "station_end            0\n",
+              "ride_duration      73064\n",
+              "ride_late          73064\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# preencher valores ausentes em `ride_duration` com a mediana\n",
+        "rd_median = df_clean.ride_duration.median()\n",
+        "df_clean = df_clean.fillna({\"ride_duration\": rd_median})\n",
+        "\n",
+        "# ver valores ausentes\n",
+        "df_clean.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "4V6CSkXLnbFk",
+        "outputId": "af4b0cd8-8582-49e0-bcaf-531e4812f002",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "user_gender            0\n",
+              "user_birthdate         1\n",
+              "user_residence    179818\n",
+              "ride_date              0\n",
+              "time_start             0\n",
+              "time_end           43212\n",
+              "station_start          0\n",
+              "station_end            0\n",
+              "ride_duration          0\n",
+              "ride_late          73064\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "No caso da coluna `user_gender`, temos uma variável categórica. O ideal aqui é usar o valor mais frequente para o preenchimento dos valores. Valor ver qual aquele que tem maior recorrência e substituir diretamente na coluna."
+      ],
+      "metadata": {
+        "id": "RMpO2U3jndZv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# copiar novamente\n",
+        "df_clean = df.copy()\n",
+        "\n",
+        "# ver valores ausentes\n",
+        "df_clean.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "QRDXKzRQng49",
+        "outputId": "0109091a-f9c8-4188-b1ec-0424809481cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "user_gender          396\n",
+              "user_birthdate         1\n",
+              "user_residence    179905\n",
+              "ride_date              0\n",
+              "time_start             0\n",
+              "time_end           43285\n",
+              "station_start          0\n",
+              "station_end            0\n",
+              "ride_duration      73174\n",
+              "ride_late          73174\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ver o valor mais frequente\n",
+        "df_clean.user_gender.value_counts()"
+      ],
+      "metadata": {
+        "id": "q1cUHfj3njKE",
+        "outputId": "dfd48c67-9c57-4779-e32a-31bac01befaf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "M    212608\n",
+              "F     74318\n",
+              "Name: user_gender, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# preencher os valores ausentes de user_gender com 'M'\n",
+        "df_clean = df_clean.fillna({\"user_gender\": 'M'})\n",
+        "\n",
+        "# ver valores ausentes\n",
+        "df_clean.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "CcEiS5QVnk66",
+        "outputId": "1ae1c178-ffda-43d2-947a-cc0037ce6372",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "user_gender            0\n",
+              "user_birthdate         1\n",
+              "user_residence    179905\n",
+              "ride_date              0\n",
+              "time_start             0\n",
+              "time_end           43285\n",
+              "station_start          0\n",
+              "station_end            0\n",
+              "ride_duration      73174\n",
+              "ride_late          73174\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
       ]
     }
   ]
