--- a/20_Wordcloud.ipynb
+++ b/20_Wordcloud.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAl0xPBSwQdJSoWGY6K9iu",
+      "authorship_tag": "ABX9TyMYTlNzDSwB7MlnJ5DFcTK2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,12 +76,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "T3f8vga3j0fP"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# instalar wordcloud\n",
+        "!pip install wordcloud -q"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importar os pacotes necessários\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from wordcloud import WordCloud, STOPWORDS, ImageColorGenerator"
+      ],
+      "metadata": {
+        "id": "dGyNEuLRlbpS"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DATA_PATH = \"http://data.insideairbnb.com/brazil/rj/rio-de-janeiro/2021-04-26/data/listings.csv.gz\"\n",
+        "\n",
+        "# importar o arquivo csv em um df\n",
+        "df = pd.read_csv(DATA_PATH)"
+      ],
+      "metadata": {
+        "id": "URoraA0wliAp"
+      },
+      "execution_count": 3,
+      "outputs": []
     }
   ]
 }
