--- a/22_Mapas.ipynb
+++ b/22_Mapas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5BosdZZ+z382ERZhKdAuM",
+      "authorship_tag": "ABX9TyPTQgQX5EGVwmEwlx8ZMkLZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,10 +94,23 @@
         "df = pd.read_csv(\"http://data.insideairbnb.com/united-states/ny/new-york-city/2023-03-06/visualisations/listings.csv\")"
       ],
       "metadata": {
-        "id": "Ux1x0rDZWXeE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ux1x0rDZWXeE",
+        "outputId": "8a4a32bd-d278-4cc0-9741-a7dc35cee654"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-3-97f6cef03528>:2: DtypeWarning: Columns (17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  df = pd.read_csv(\"http://data.insideairbnb.com/united-states/ny/new-york-city/2023-03-06/visualisations/listings.csv\")\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -109,6 +122,64 @@
       "metadata": {
         "id": "T9CfimwdWaIn"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verificando o tamanho do dataset\n",
+        "print('Dataset original: ', df.shape)\n",
+        "\n",
+        "# criando um dataset menor\n",
+        "df_map = df.sample(frac=0.01, random_state=0)\n",
+        "\n",
+        "# verificando o tamanho do dataset\n",
+        "print('Dataset para o plot: ', df_map.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bTOUqEZTWhZv",
+        "outputId": "0c69f0d8-2e5c-410b-b869-3fadcc17bdcd"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset original:  (42931, 18)\n",
+            "Dataset para o plot:  (429, 18)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para plotar o nosso mapa, vamos precisar extrair os valores de algumas colunas e transformar em variáveis, para passarmos como parâmetro para o nosso mapa.\n",
+        "\n",
+        "Essas variáveis são `latitude`, `longitude` e os labels que queremos mostrar quando passarmos o mouse por. cima dos pontos, que nesse caso serão a descrição dos anúncios, salvos na coluna `name`.\n",
+        "\n",
+        "Com essas variáveis estaremos prontos para criar nosso mapa!"
+      ],
+      "metadata": {
+        "id": "N_yXYM8oWoIf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# criando as variáveis necessárias\n",
+        "latitude = df_map.latitude.values\n",
+        "longitude = df_map.longitude.values\n",
+        "listings = df_map.name.values"
+      ],
+      "metadata": {
+        "id": "gnQq8s36WnHv"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
