--- a/22_Mapas.ipynb
+++ b/22_Mapas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPLdzGuC0PGDUmoi3k5ntb",
+      "authorship_tag": "ABX9TyOMO0pkjwhVh/tIUQIVyBSE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "GeLN9ewUV25A"
       },
@@ -100,7 +100,7 @@
         "id": "Ux1x0rDZWXeE",
         "outputId": "8a4a32bd-d278-4cc0-9741-a7dc35cee654"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "bTOUqEZTWhZv",
         "outputId": "0c69f0d8-2e5c-410b-b869-3fadcc17bdcd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
       "metadata": {
         "id": "gnQq8s36WnHv"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "id": "6HWkdl1YW39y",
         "outputId": "a4fe3a18-3c31-46a6-946e-7d0f72b15d0d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +346,7 @@
       "metadata": {
         "id": "bfiqhdFTXEwG"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
         "id": "4axu1anVXGxe",
         "outputId": "dffff0a2-3da3-491a-c84f-94459f35b655"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +416,7 @@
         "id": "e7s67AU9XKGX",
         "outputId": "006a18bb-98e1-4893-a433-408ab39a55fc"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9148,7 +9148,7 @@
         "id": "ikOaWicdXPYY",
         "outputId": "0f44abf8-959a-42bc-e010-926657d48a57"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9257,6 +9257,23 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Links para ler:\n",
+        "\n",
+        "[Documentação Oficial Folium](https://python-visualization.github.io/folium/latest/)\n",
+        "\n",
+        "[Documentação Oficial PyDeck](https://deckgl.readthedocs.io/en/latest/)\n",
+        "\n",
+        "[Fonte dos Dados - Inside Airbnb](http://insideairbnb.com/)\n",
+        "\n",
+        "[Google Maps](https://www.google.com/maps/place/New+York,+NY,+USA/@40.6974881,-73.979681,10z/data=!3m1!4b1!4m6!3m5!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!8m2!3d40.7127753!4d-74.0059728!16zL20vMDJfMjg2?entry=ttu)"
+      ],
+      "metadata": {
+        "id": "ks87P7j5X491"
+      }
     }
   ]
 }
