--- a/24_Introdução_ao_Scikit_Learn.ipynb
+++ b/24_Introdução_ao_Scikit_Learn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGZ7y/jRkNQRjvEy6yGQy1",
+      "authorship_tag": "ABX9TyMQvwH9cZmiIPKZkFi+fFL9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -456,6 +456,47 @@
         "import pandas as pd\n",
         "df = pd.read_csv(\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/heart-disease-uci.csv\")\n",
         "df.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Como você já sabe, cada linha representa uma entrada única, um lançamento no banco de dados e cada coluna representa uma *feature* (variável, atributo).\n",
+        "\n",
+        "No caso desse DataFrame, para criarmos um modelo de regressão, seria necessário dividí-lo em uma matriz `X` contendo as variáveis independentes (*features*) e um vetor alvo `y` contendo as variáveis dependentes (variáveis alvos)."
+      ],
+      "metadata": {
+        "id": "TW6geWZHFYRj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df.drop('num', axis=1)\n",
+        "y = df.num\n",
+        "\n",
+        "print(\"df.shape:\\t{}\".format(df.shape))\n",
+        "print(\"X.shape:\\t{}\".format(X.shape))\n",
+        "print(\"y.shape:\\t{}\".format(y.shape))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dl-ys_DQFQFP",
+        "outputId": "38c40ef3-4c76-4fb1-a1f5-d77873d2bd7d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "df.shape:\t(303, 14)\n",
+            "X.shape:\t(303, 13)\n",
+            "y.shape:\t(303,)\n"
+          ]
+        }
       ]
     }
   ]
