--- a/26_Como_Avaliar_um_Modelo_de_Machine_Learning.ipynb
+++ b/26_Como_Avaliar_um_Modelo_de_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZk0LF19giZ4LhyjNx6uwZ",
+      "authorship_tag": "ABX9TyOrStvUexR7sEG9lHVHERPb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -344,6 +344,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Referências**\n",
+        "\n",
+        "[MAE and RMSE — Which Metric is Better?](https://medium.com/human-in-a-machine-world/mae-and-rmse-which-metric-is-better-e60ac3bde13d)\n",
+        "\n",
+        "[​​​​Tutorial: Understanding Regression Error Metrics in Python](https://www.dataquest.io/blog/understanding-regression-error-metrics/)\n",
+        "\n",
+        "[Art of Choosing Metrics in Supervised Models Part 1](https://towardsdatascience.com/art-of-choosing-metrics-in-supervised-models-part-1-f960ae46902e)\n",
+        "\n",
+        "[Documentação oficial do Scikit-learn](https://scikit-learn.org/stable/modules/model_evaluation.html#regression-metrics) (com as métricas)\n",
+        "\n",
+        "[How to implement Classification in Machine Learning](https://www.edureka.co/blog/classification-in-machine-learning/) - Edureka\n",
+        "\n",
+        "[4 Types of Classification tasks in Machine Learning - Machine Learning Mastery](https://machinelearningmastery.com/types-of-classification-in-machine-learning/)\n",
+        "\n",
+        "[Machine Learning Classifiers - Towards Data Science](https://towardsdatascience.com/machine-learning-classifiers-a5cc4e1b0623)\n",
+        "\n",
+        "[Machine Learning Crash Course](https://developers.google.com/machine-learning/crash-course/classification/precision-and-recall)\n",
+        "\n",
+        "[How to Calculate Precision, Recall, and F-Measure for Imbalanced Classification](https://machinelearningmastery.com/precision-recall-and-f-measure-for-imbalanced-classification/)\n",
+        "\n",
+        "[sklearn.metrics.confusion_matrix](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html) (documentação)"
+      ],
+      "metadata": {
+        "id": "NJNS8YGSFnG0"
+      }
     }
   ]
 }
